fix: popup direction and clipping

--- a/src/components/Popup/Popup.module.css
+++ b/src/components/Popup/Popup.module.css
@@ -20,7 +20,7 @@
   border-radius: 12px;
   padding: 2rem;
   width: 75vw;
-  max-height: 95vh;
+  max-height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -29,6 +29,7 @@
   overflow: hidden;
   box-shadow: 0 0 20px rgba(255, 255, 255, 0.2);
   animation: fadeInPopup 0.35s ease forwards;
+  flex-direction: column;
 }
 
 .closeButton {
@@ -53,14 +54,14 @@
 }
 
 .scrollableContent {
-  overflow-y: auto;
-  padding-right: 0;
-  max-height: calc(90vh - 4rem);
-  margin-right: 1rem;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  overflow-y: auto;
+  height: 100%;
 }
+
 .scrollableContent::-webkit-scrollbar {
   width: 8px;
 }
@@ -121,7 +122,6 @@
   }
 
   .scrollableContent {
-    max-height: calc(95vh - 3rem);
     padding-right: 1rem;
   }
 
